--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
-    <title>Huddle landing page with a single introductory section</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./style/style.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+            integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link
+            rel="shortcut icon"
+            href="./images/favicon.png"
+            type="image/x-icon"
+        />
+        <title>Huddle landing page with a single introductory section</title>
+    </head>
+    <body>
+        <div class="navbar">
+            <img src="./images/logo.svg" alt="" />
+        </div>
+        <div class="hero-section">
+            <div class="left-part">
+                <img src="./images/illustration-mockups.svg" alt="" />
+            </div>
+            <div class="right-part">
+                <div class="hero-heading">
+                    <h2>Build The Community Your Fans You Will Love</h2>
+                </div>
+                <div class="hero-text">
+                    <p>
+                        Huddle re-imagines the way we build communities. You
+                        have a voice, but so does your audience. Create
+                        connections with your users as you engage in genuine
+                        discussion
+                    </p>
+                </div>
+                <div class="hero-btn">
+                    <button>Register</button>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="social-icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+            </div>
+        </div>
+    </body>
 </html>
